--- a/website/site-static/sass/wip.sass
+++ b/website/site-static/sass/wip.sass
@@ -8,6 +8,7 @@
 //
 @import element/listview
 @import element/itemview
+@import element/filterbox
 @import apps/atracker
 @import apps/markdown
 @import apps/postman
