--- a/website/templates/base/_common_script.html
+++ b/website/templates/base/_common_script.html
@@ -77,6 +77,7 @@
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.autogrow.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.qtip.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.tools.min.js"></script>{% endaddtoblock %}
+	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.purl.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-uncompressed" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.pulse.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-uncompressed" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.highlight.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-uncompressed" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.watch.js"></script>{% endaddtoblock %}
