fixes verbatim errors

--- a/website/apps/alibrary/templates/alibrary/release_detail.html
+++ b/website/apps/alibrary/templates/alibrary/release_detail.html
@@ -47,6 +47,15 @@
     <!-- end: intra-module navigation -->
 {% endblock %}
 
+
+{% comment %}{% block searchbar %}
+
+    {% with object=item ct="release" %}
+        {% include "alibrary/element/_searchbar.html" %}
+    {% endwith %}
+
+{% endblock %}{% endcomment %}
+
 {% block inner %}
 
 
