--- a/website/site-static/sass/apps/_base.sass
+++ b/website/site-static/sass/apps/_base.sass
@@ -9,5 +9,6 @@
 @import apps/alibrary
 @import apps/collector
 @import apps/statistics
+@import apps/backfeed
 // @import apps/scheduler // stand-alone file a.t.m.
 
