--- a/website/site-static/sass/site/_type.sass
+++ b/website/site-static/sass/site/_type.sass
@@ -120,7 +120,9 @@ dd
   line-height: $baseLineHeight
 
 dt
-  font-weight: bold
+  font-weight: normal
+  opacity: 0.6
+  text-align: left
 
 dd
   margin-left: $baseLineHeight / 2
