--- a/website/site-static/sass/element/_listview.sass
+++ b/website/site-static/sass/element/_listview.sass
@@ -104,7 +104,8 @@
           &:first-child
             margin-right: 12px
           &.top
-            background: #0b0
+            background: #46b5fd
+            color: #fff
           &.flop
             background: red
 
