--- a/website/templates/base/_common_script.html
+++ b/website/templates/base/_common_script.html
@@ -129,6 +129,7 @@
 	<!-- alibrary apps -->
 	
 	<!-- utils -->
+    {% addtoblock "js-uncompressed" %}<script type="text/javascript" src="{{ STATIC_URL }}js/util.base.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-uncompressed" %}<script type="text/javascript" src="{{ STATIC_URL }}js/util/util.base.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-uncompressed" %}<script type="text/javascript" src="{{ STATIC_URL }}js/util/util.notify.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-uncompressed" %}<script type="text/javascript" src="{{ STATIC_URL }}js/util/util.dialog.js"></script>{% endaddtoblock %}
