loads of fixes.

--- a/website/apps/importer/templates/importer/import_form_pushy.html
+++ b/website/apps/importer/templates/importer/import_form_pushy.html
@@ -177,7 +177,7 @@ $(document).ready(function() {
 	<div class="listing">
 		<div id="result_holder">
 
-            <p>{% trans "Loading import" %}</p>
+            {% comment %}<p>{% trans "Loading import" %}</p>{% endcomment %}
 
 		</div>
     </div>
